# hic-aws-costing-tools

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yml
hic_aws_costing_tools/: __init__.py  app.py  aws_costs.py  main.py
tests/: test_costbot.py
tests/dummy-proj/: get_cost_and_usage.json  get_dimension_values-LINKED_ACCOUNT.json  get_tags.json  test-costs_to_flat.json  test-costs_to_table.json  test-format_message_all-False.html  test-format_message_all-False.md  test-format_message_all-True.html  test-format_message_all-True.md  test-format_message_summarise.html  test-format_message_summarise.md
tests/dummy-services/: get_cost_and_usage.json  get_dimension_values-SERVICE.json  test-costs_to_flat.json  test-costs_to_table.json  test-format_message_all-False.html  test-format_message_all-False.md  test-format_message_all-True.html  test-format_message_all-True.md  test-format_message_summarise.html  test-format_message_summarise.md
