# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hic-aws-costing-tools"
dynamic = ["version"]
authors = [
  {name = "Health Informatics Centre, University of Dundee"}
]
description = "HIC AWS costing tools"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD-3-Clause"}
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "boto3",
]

[project.scripts]
aws-costs = "hic_aws_costing_tools.main:main"

[project.urls]
homepage = "https://github.com/hic-infra/hic-aws-costing-tools"

[tool.setuptools_scm]
